Fixing #372, Test cases to come