@@ -252,7 +252,6 @@ public class UnifiedG1GCParser extends UnifiedGCLogParser implements UnifiedG1GC
         publish(new JVMTermination((jvmTerminationEventTime.hasTimeStamp()) ? jvmTerminationEventTime : getClock(),diary.getTimeOfFirstEvent()));
     }
 
-
     /**
      * following records describe heap before the collection
      *
@@ -508,12 +507,29 @@ public class UnifiedG1GCParser extends UnifiedGCLogParser implements UnifiedG1GC
             forwardReference.setMetaspaceSizeAfterCollection(trace.toKBytes(5));
         }
     }
-
+    
     public void youngDetails(GCLogTrace trace, String line) {
         forwardReference.setHeapOccupancyBeforeCollection(trace.toKBytes(5));
         forwardReference.setHeapOccupancyAfterCollection(trace.toKBytes(7));
         forwardReference.setHeapSizeAfterCollection(trace.toKBytes(9));
         forwardReference.setDuration(trace.getDurationInSeconds());
+
+        // Handling -Xlog:gc logs (#372)
+    	// If the GC log was generated using -Xlog:gc instead of -Xlog:gc*, there won't be a CPU breakout
+        // line that will publish the event.  (cpuBreakout() above)
+
+        // If we haven't spotted a CPU decorator in the diarizer, we should be able to publish this line 
+        // after filling in the missing info.
+    	if (forwardReference.getGcType() == null && !diary.isPrintCPUTimes()) {
+    		forwardReference.setGcType(GarbageCollectionTypes.Young);
+    		forwardReference.setGCCause(trace.gcCause(-2));
+    		forwardReference.setStartTime(getClock());
+            try {
+                publishPauseEvent(forwardReference.buildEvent());
+            } catch (MalformedEvent malformedEvent) {
+                LOGGER.warning(malformedEvent.getMessage());
+            }
+    	}
     }
 
     /**
